--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -38,7 +38,7 @@
       <div class="row justify-content-center text-center">
         <div class="col-lg-5">
           <h2 class="h4">Scalability</h2>
-          <p>Forensibus is easy to deploy at any scale. Y can start with a standalone binary and then end up with a distributed installation on a cluster.</p>
+          <p>Forensibus is easy to deploy at any scale. You can start with a standalone binary and then end up with a distributed installation on a cluster.</p>
         </div>
         <div class="col-lg-5">
           <h2 class="h4">Simple</h2>
