--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -7,7 +7,7 @@
     </div>
     <div class="col-lg-9 col-xl-8 text-center">
       <p class="lead">{{ .Params.lead | safeHTML }}</p>
-      <a class="btn btn-primary btn-lg px-4 mb-2" href="/docs/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}prologue/introduction/" role="button">{{ i18n "get-started" }}</a>
+      <a class="btn btn-primary btn-lg px-4 mb-2" href="/docs/{{ if .Site.Params.options.docsVersioning }}{{ .Site.Params.docsVersion }}/{{ end }}features/introduction/" role="button">{{ i18n "get-started" }}</a>
       <p class="meta">Open-source GPL Licensed. <a href="https://github.com/jurelou/forensibus"></a></p>
     </div>
   </div>
